<resources>
    <string name="app_name">StudyAppTest</string>
    <string name="onboard_title">Тысячи курсов \nв одном месте</string>
    <string name="continue_button">Продолжить</string>
    <string name="c_administration">1С Администрирование</string>
    <string name="rabbitMQ">RabbitMQ</string>
    <string name="traffic">Трафик</string>
    <string name="content_marketing">Контент маркетинг</string>
    <string name="b2b_marketing0">B2B маркетинг</string>
    <string name="google_analitics">Google Аналитика</string>
    <string name="UX_researcher">UX исследователь</string>
    <string name="Web_analitics">Веб-аналитика</string>
    <string name="big_data">Big Data</string>
    <string name="gamedesign">Геймдизайн</string>
    <string name="web_design">Веб-дизайн</string>
    <string name="cinema_4d">Cinema 4D</string>
    <string name="promt_engineering">Промпт инженеринг</string>
    <string name="webflow">Webflow</string>
    <string name="three_js">Three.js</string>
    <string name="parsing">Парсинг</string>
    <string name="python_develop">Python-разработка</string>
</resources>